--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,4 +1,5 @@
 $main-border: 1px solid #d8d8d8;
+$main-border-white: 1px solid #ffffff;
 $warning-border: 1px solid #9d3838;
 $input-padding: 10px;
 $out-margin: 10px;
@@ -6,7 +7,7 @@ $rounded: 6px;
 $rounded-sm: 4px;
 $main-white: #ffffff;
 $flatdrop: #f2f2f2;
-$hdrop: #f0f0f0;
+$hdrop: #ececec;
 $backdrop: #dfdfdf;
 $text-color: #636363;
 $link-color: #5b75a0;
